@@ -55,7 +55,6 @@ Wishlist
 - Enable flagging of articles in unified view (with contextual menu?).
 - Preference to expire unread articles as well as read articles.
 - Check for internet connection before checking for new articles.
-- Filter articles by flagged.
 - Hold down option key (or other combo) while pressing mark all read button to mark all subscriptions read.
 - Use shift key to toggle whether to open tabs in foreground/background in Vienna.
 - Drop-down navigation list for back and forward buttons in browser pane.
